<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IT213.DoctorHome">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tba_doctor"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:background="#004E53"
        android:backgroundTint="@color/tba_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tba_doctor"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/btn_mynotes"
        android:layout_width="293dp"
        android:layout_height="56dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#004E63"
        android:onClick="addNotes"
        android:text="@string/btn_mynotes"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_vacc_details"
        android:layout_width="293dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#004E63"
        android:onClick="getRequest"
        android:text="@string/btn_vacc_details"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_mynotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_imageview"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btn_background"
        android:text="@string/btn_sign_out"
        android:textColor="@color/txt_textcolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tba_doctor" />

    <ImageView
        android:id="@+id/img_imageview"
        android:layout_width="0dp"
        android:layout_height="346dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_out"
        app:srcCompat="@drawable/image1n" />

</androidx.constraintlayout.widget.ConstraintLayout>