<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IT211.UpdateProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="#3F51B5"
            android:backgroundTint="#3F51B5"
            android:text="    Update Profile "
            android:textColor="#FBFAFA"
            android:textColorHint="#F8F5F5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="60dp"
            android:gravity="bottom"
            android:orientation="horizontal" />
        <TextView
            android:id="@+id/textView165"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:text="Your Name"
            android:textColor="#3F51B5"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="203dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="295dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/editText8"
            android:textColor="#8A8888"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="150dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:text="@string/textView16"
            android:textColor="#3F51B5"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="203dp" />

        <EditText
            android:id="@+id/userphone"
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/editText5"
            android:textColor="#858484"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="230dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:text="@string/textView17"
            android:textColor="#3F51B5"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="284dp" />

        <EditText
            android:id="@+id/useremail"
            android:layout_width="291dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#858484"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="316dp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:text="@string/textView29"
            android:textColor="#3F51B5"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="372dp" />

        <EditText
            android:id="@+id/userpasswored"
            android:layout_width="299dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/editTextTextPassword"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="517dp" />

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="60dp"
            android:gravity="bottom"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="updateUser"
                android:text="Update"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="628dp" />

            <LinearLayout
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <Button
                android:id="@+id/button345"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="deleteUser"
                android:text="Delete"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="628dp" />
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>